samples/_failures_safe/1761179932_6c4b04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11508ff1.c: In function ‘main’:
./samples/SAFE/__tmp_11508ff1.c:142:12: error: expected ‘)’ at end of input
  142 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_11508ff1.c:142:5: error: expected declaration or statement at end of input
  142 |     if (len
      |     ^~
